Watch command and basic stuff.

--- a/index.jade
+++ b/index.jade
@@ -1,11 +1,15 @@
 doctype html
 html
   head
-    title Moose’s JavaScript Zone
+    title Functional JavaScript Snippets
     meta(charset="utf-8")
-    link(rel="stylesheet", href="/static/boostrap.readable.min.css")
+    link(rel="stylesheet", href="static/bootstrap.readable.min.css")
   body
     .container
-      .hero-unit
-        h1 Moose's JavaScript Zone
-    
+      .row
+        .col-xs-12
+          .page-header
+            h1 Functional JavaScript Snippets
+          p.
+            JavaScript is a functional language. Here are some fun functional
+            snippets.
