--- a/index.jade
+++ b/index.jade
@@ -15,11 +15,12 @@ html
           p.
             JavaScript supports first-class functions which makes a lot of
             functional programming easy.
-            Also, as of ES5 JavaScript has built-in support for 
+            With ES5, JavaScript has built-in support for 
             functional programming constructs like a #[code .map()] &amp;
-            #[code .reduce()] which is even more fun.
+            #[code .reduce()].
           p.
-            Here are some fun snippets to get the creative juices flowing.
+            Here are some fun snippets to demonstrate functional programming
+            concepts with JavaScript.
           p.
             Based on exercises from
             #[a(href="https://www.4clojure.com/problems") 4Clojure.]
